--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
     <footer>
         <p>&copy; 2026 Talha İsmet Barut | Designed by t1b</p>
         <div class="social-links">
-            <a href="#" title="GitHub"><i class="fa-brands fa-github"></i></a>
-            <a href="#" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="#" title="Email"><i class="fa-solid fa-envelope"></i></a>
+            <a href="https://github.com/TalhaIsmetBarut" title="GitHub"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/talha-ismet-barut-3678702b5/" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="ismet.hl@hotmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
         </div>
     </footer>
 
@@ -170,5 +170,6 @@
     <script src="js/turkey-map.js"></script>
     <script src="js/main.js"></script>
 </body>
+
 
 </html>
