--- a/index.html
+++ b/index.html
@@ -159,7 +159,9 @@
         <div class="social-links">
             <a href="https://github.com/TalhaIsmetBarut" title="GitHub"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/talha-ismet-barut-3678702b5/" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="ismet.hl@hotmail.com" title="Email"><i class="fa-solid fa-envelope"></i></a>
+            <a href="mailto:ismet.hl@hotmail.com?subject=Merhaba T1B!" title="Email">
+                <i class="fa-solid fa-envelope"></i>
+            </a>
         </div>
     </footer>
 
@@ -173,3 +175,4 @@
 
 
 </html>
+
